--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/_GridViewPartial_cobranza_sinret.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/_GridViewPartial_cobranza_sinret.cshtml
@@ -52,7 +52,7 @@
                 e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
         settings.Columns.Add("IdCbteVta", "ID").Width = Unit.Percentage(5);
-        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(8);
+        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(12);
         settings.Columns.Add("vt_NumFactura", "# Documento").Width = Unit.Percentage(10);
         settings.Columns.Add("pe_nombreCompleto", "Cliente").Width = Unit.Percentage(25);
 
@@ -63,33 +63,32 @@
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
             column.Width = Unit.Percentage(7);
         });
-
         settings.Columns.Add(column =>
         {
-            column.Width = Unit.Percentage(5);
-            column.FieldName = "Saldo";
-            column.Caption = "Saldo";
-            column.PropertiesEdit.DisplayFormatString = "{0:N2}";
-        });
-        settings.Columns.Add(column =>
-        {
-            column.Width = Unit.Percentage(5);
+            column.Width = Unit.Percentage(9);
             column.FieldName = "vt_Subtotal";
             column.Caption = "Subtotal";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
         });
         settings.Columns.Add(column =>
         {
-            column.Width = Unit.Percentage(5);
+            column.Width = Unit.Percentage(7);
             column.FieldName = "vt_Iva";
             column.Caption = "I.V.A.";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
         });
         settings.Columns.Add(column =>
         {
-            column.Width = Unit.Percentage(5);
+            column.Width = Unit.Percentage(9);
             column.FieldName = "vt_Total";
             column.Caption = "Total";
+            column.PropertiesEdit.DisplayFormatString = "{0:N2}";
+        });
+        settings.Columns.Add(column =>
+        {
+            column.Width = Unit.Percentage(9);
+            column.FieldName = "Saldo";
+            column.Caption = "Saldo";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
         });
         settings.Columns.Add(c =>
@@ -102,16 +101,16 @@
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
-            c.Width = Unit.Percentage(10);
+            c.Width = Unit.Percentage(6);
         });
-        settings.Columns.Add(column =>
-        {
-            column.SetDataItemTemplateContent(c =>
-            {
-                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("CXC_002", "CuentasPorCobrarReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdSucursal = DataBinder.Eval(c.DataItem, "IdSucursal"), IdBodega_Cbte = DataBinder.Eval(c.DataItem, "IdBodega"), IdCbte_vta_nota = DataBinder.Eval(c.DataItem, "IdCbteVta"), dc_TipoDocumento = DataBinder.Eval(c.DataItem, "vt_tipoDoc") }, Request.Url.Scheme) + "');\"></span>");
-            });
-            column.Width = Unit.Percentage(5);
-        });
+        //settings.Columns.Add(column =>
+        //{
+        //    column.SetDataItemTemplateContent(c =>
+        //    {
+        //        ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("CXC_002", "CuentasPorCobrarReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdSucursal = DataBinder.Eval(c.DataItem, "IdSucursal"), IdBodega_Cbte = DataBinder.Eval(c.DataItem, "IdBodega"), IdCbte_vta_nota = DataBinder.Eval(c.DataItem, "IdCbteVta"), dc_TipoDocumento = DataBinder.Eval(c.DataItem, "vt_tipoDoc") }, Request.Url.Scheme) + "');\"></span>");
+        //    });
+        //    column.Width = Unit.Percentage(5);
+        //});
 
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
