--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/AplicarRetencion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/AplicarRetencion.cshtml
@@ -104,7 +104,7 @@
             </div>
             <div class="col-md-2">
                 <div class="form-group">
-                    <label for="IdCobro_tipo">Se provisiona*</label>
+                    <label for="IdCobro_tipo"> </label>
                     @Html.DevExpress().CheckBoxFor(q => q.cr_EsProvision, settings =>
                             {
                                 settings.Name = "cr_EsProvision";
