--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionRetencionCliente/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionRetencionCliente/Modificar.cshtml
@@ -100,6 +100,11 @@
             }
         });
     };
+    function Imprimir() {
+        var location = GetPathServer();
+        var win = window.open(location +"/Reportes/ContabilidadReportes/CONTA_001?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdSucursal="+@Model.IdSucursal+"&IdCobro="+@Model.IdCobro, '_blank');
+        win.focus();
+    }
 </script>
 @using (Html.BeginForm("Modificar", "LiquidacionRetencionCliente", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
@@ -114,6 +119,15 @@
         <div class="alert alert-warning alert-dismissible">
             <h4>
                 <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
             </h4>
         </div>
     }
@@ -165,6 +179,22 @@
                         settings.Properties.AllowMouseWheel = false;
                     }).GetHtml()
                     @Html.ValidationMessageFor(q => q.li_Fecha, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-1">
+                <label for="IdNuevo"></label>
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <label for="IdNuevo"></label>
+                <div class="form-group">
+                    <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","LiquidacionRetencionCliente",new { Area = "CuentasPorCobrar", IdEmpresa = Model.IdEmpresa },null)">
+                        <i class="fa fa-plus"></i>
+                    </a>
                 </div>
             </div>
         </div>
