--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoRRHH/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoRRHH/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.RRHH.ro_catalogo_Info
 @{
     ViewBag.Title = "Consulta de catálogos";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,7 +10,8 @@
 
 @using (Html.BeginForm())
 {
-
+    @Html.HiddenFor(q => q.IdTipoCatalogo, new { @id = "IdTipoCatalogo" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
     @Html.Action("GridViewPartial_catalogos")
 
