--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoRRHH/_GridViewPartial_catalogos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoRRHH/_GridViewPartial_catalogos.cshtml
@@ -67,13 +67,11 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(100);
         });
-
-
-
         settings.Columns.Add("IdCatalogo", "ID").Width = Unit.Percentage(8);
         settings.Columns.Add("CodCatalogo","Código").Width = Unit.Percentage(8);
         settings.Columns.Add("ca_descripcion","Descripción").Width = Unit.Percentage(68);
 
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
