--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoTipoRRHH/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoTipoRRHH/Index.cshtml
@@ -1,6 +1,6 @@
-﻿
+﻿@model Core.Erp.Info.RRHH.ro_catalogoTipo_Info
 @{
-    ViewBag.Title = "Tipo catálogo";
+    ViewBag.Title = "Consulta de tipos de catálogos";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -10,7 +10,7 @@
 
 @using (Html.BeginForm())
 {
-
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.Action("GridViewPartial_CatalogoTipo")
 
 }
