--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoTipoRRHH/_GridViewPartial_CatalogoTipo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoTipoRRHH/_GridViewPartial_CatalogoTipo.cshtml
@@ -103,7 +103,7 @@
                 }).Render();
             });
         });
-
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
