--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Anular.cshtml
@@ -266,7 +266,7 @@
     </div>
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Guardar</button>
+        <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index","Rubro",new { Area = "RRHH" },null)">Cancelar</a>
     </div>
     @section Scripts {
