--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.RRHH.ro_rubro_tipo_Info
 @{
     ViewBag.Title = "rubros";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -9,6 +9,8 @@
 }
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
     @Html.Action("GridViewPartial_rubro")
 
