--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_022.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_022.cshtml
@@ -111,7 +111,7 @@
                             @Html.ValidationMessageFor(q => q.IdMarca, "", new { @class = "text-danger" })
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    @*<div class="col-md-3">
                         <div class="form-group">
                             @Html.DevExpress().CheckBoxFor(q => q.InventarioFisico, settings =>
                            {
@@ -119,7 +119,7 @@
                                settings.Text = "Inventario Fisico";
                            }).GetHtml()
                         </div>
-                    </div>
+                    </div>*@
                 </div>
             </div>
             <div class="row">
